@@ -403,7 +403,7 @@ typedef enum {
  */
 -(void)pumpFolderIconRefresh:(Folder *)folder
 {
-	if (([folder flags] & MA_FFlag_CheckForImage) && ![[folder homePage] isBlank])
+	if (([folder flags] & MA_FFlag_CheckForImage) && [folder homePage] != nil && ![[folder homePage] isBlank])
 	{
 		// The activity log name we use depends on whether or not this folder has a real name.
 		Database * db = [Database sharedDatabase];
@@ -413,7 +413,7 @@ typedef enum {
 		[aItem appendDetail:NSLocalizedString(@"Retrieving folder image", nil)];
 
 		AsyncConnection * conn = [[AsyncConnection alloc] init];
-		NSString * favIconPath = [NSString stringWithFormat:@"http://%@/favicon.ico", [[folder homePage] baseURL]];
+		NSString * favIconPath = [NSString stringWithFormat:@"http://%@/favicon.ico", [[[folder homePage] trim] baseURL]];
 		
 		if ([conn beginLoadDataFromURL:[NSURL URLWithString:favIconPath]
 						  username:nil
