@@ -12,6 +12,8 @@ Thanks!
 - Article view split bar position is now properly persisted across sessions.
 - Disabled proportional folder and article list split bar resizing when the main window is resized.
 - Selecting multiple articles now shows multiple articles in the article pane.
+- Fixed problem when parsing feeds from http://macintouch.com/rss.xml. Some servers report an error unless
+  the User-agent field is specified in the HTTP header.
 
 2.0.0.2006
 ----------
